attempt 2 to fix image

--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -50,8 +50,9 @@
     "$$\n",
     "f(x) = x^3 +2x^2\n",
     "$$\n",
-    "The evaluation of this function can be represented by the computational graph below where the numbers in orange are the function values while the numbers in blue are the derivatives evaluated after applying each elementary operation:\n",
-    "![](https://github.com/West-Coast-Differentiators/cs107-FinalProject/blob/milestone1/docs/ex_comp_graph.png)"
+    "The evaluation of this function can be represented by the computational graph below where the numbers in orange are the function values and the numbers in blue are the derivatives evaluated after applying each elementary operation:\n",
+    "\n",
+    "<img src=\"https://github.com/West-Coast-Differentiators/cs107-FinalProject/blob/milestone1/docs/ex_comp_graph.png\" width=\"75%\" align=right />"
    ]
   },
   {
