--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display, HTML "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "cell_id": "00002-beeaf662-2ede-4583-a414-f25e148ac07d",
@@ -51,7 +60,7 @@
     "f(x) = x^3 +2x^2\n",
     "$$\n",
     "The evaluation of this function can be represented by the computational graph below where the numbers in orange are the function values while the numbers in blue are the derivatives evaluated after applying each elementary operation:\n",
-    "![](https://github.com/West-Coast-Differentiators/cs107-FinalProject/blob/milestone1/docs/ex_comp_graph.png)"
+    "<img src=\"ex_comp_graph.png\">"
    ]
   },
   {
