--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -52,7 +52,7 @@
     "$$\n",
     "The evaluation of this function can be represented by the computational graph below where the numbers in orange are the function values and the numbers in blue are the derivatives evaluated after applying each elementary operation:\n",
     "\n",
-    "<img src=\"https://github.com/West-Coast-Differentiators/cs107-FinalProject/blob/milestone1/docs/ex_comp_graph.png\" width=\"75%\" align=right />"
+    "<img src=\"https://raw.githubusercontent.com/anita76/playground/master/src/ex_comp_graph.png\" width=\"75%\" />"
    ]
   },
   {
