Revert "Feature: Milestone 1 feedback - clarified Variable class usage."
This reverts commit 1b7cfa3423c5f7534f6498a84533c116de8da305.

--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -216,9 +216,8 @@
     "\n",
     "2. `Variable` objects\n",
     "\n",
-    "`Variable` class can be used to instantiate gradient objects and to perform derivatives. We will be implementing automatic differentiation using the operator overloading approach and `Variable` will be the only class we'll use for the project.\n",
-    "\n",
-    "These instances of `Variable` class should be used to express the scalar or vector function to be differentiated. We overload the primitive mathematical operations to evaluate the derivatives in addition to function operation values. This class has the following attributes and methods:\n",
+    "`Variable` class can be used to instantiate gradient objects.\n",
+    "These objects should be used to express the scalar or vector function to be differentiated. We overload the primitive mathematical operations to evaluate the derivatives in addition to function operation values. This class has the following attributes and methods:\n",
     "\n",
     "\n",
     "| Class Attributes        | Usage         |\n",
