Adding feedack section to Milestone 1 per piazza post https://piazza.com/class/kc57xuuysdm64b?cid=387

--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -244,9 +244,35 @@
     "Note: other mathematical operations (e.g. summation, division, etc) will have corresponding function definitions as well\n",
     "\n",
     "#### External Dependencies\n",
-    "In addition to the built-in libraries, we will use `numpy` package for implementation.\n",
-    "\n"
+    "In addition to the built-in libraries, we will use `numpy` package for implementation."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Feedback\n",
+    "\n",
+    "## Milestone 1\n",
+    "\n",
+    "Introduction\n",
+    "- How does AD compare and improve from other similar methods?\n",
+    "\n",
+    "Background\n",
+    "- The flow could be enhanced by presenting an evaluation trace along with the computational graph.\n",
+    "\n",
+    "How to use\n",
+    "- How do you install the package? By cloning your repo? Add more info on this here.\n",
+    "- Add the expected output from your example.\n",
+    "\n",
+    "Software Organization\n",
+    "- Looks good!\n",
+    "\n",
+    "Implementation\n",
+    "- So you have one class to override all the mathematical functions and to take the derivative? Or is the Variable class separate to the class methods? Elaborate further.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
